<?xml version="1.0" encoding="utf-8"?>


<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/output_text"/>

        <TextView
            android:layout_weight="60"
            android:id="@+id/text_view2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/count"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:tag="@string/tag0"
            android:id="@+id/tag0"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:tag="@string/tag1"
            android:id="@+id/tag1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:tag="@string/tag2"
            android:id="@+id/tag2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:tag="@string/tag3"
            android:id="@+id/tag3"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:tag="@string/tag4"
            android:id="@+id/tag4"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:tag="@string/tag5"
            android:id="@+id/tag5"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:tag="@string/tag6"
            android:id="@+id/tag6"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:tag="@string/tag7"
            android:id="@+id/tag7"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:tag="@string/tag8"
            android:id="@+id/tag8"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:tag="@string/tag9"
            android:id="@+id/tag9"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:tag="@string/tag10"
            android:id="@+id/tag10"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:tag="@string/tag11"
            android:id="@+id/tag11"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:tag="@string/tag12"
            android:id="@+id/tag12"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:tag="@string/tag13"
            android:id="@+id/tag13"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:tag="@string/tag14"
            android:id="@+id/tag14"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:tag="@string/tag15"
            android:id="@+id/tag15"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:text="@string/reset"
        android:layout_marginStart="80dp"
        android:layout_marginTop="80dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
</LinearLayout>